--- a/pom.xml
+++ b/pom.xml
@@ -102,10 +102,13 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
+
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.2.5</version>
         </plugin>
+
 
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
